Gave scrollbars top and bottom margin to stop cutting off the start aand bottom in-app

--- a/css/bootstrap_specific_style.css
+++ b/css/bootstrap_specific_style.css
@@ -70,11 +70,13 @@ html, body {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 	border-radius: 4px;
 	background-color: #F5F5F5;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 ::-webkit-scrollbar {
 	width: 6px;
-	background-color: #F5F5F5;
+	background-color: #e9ecef;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -85,9 +87,9 @@ html, body {
 ::-webkit-scrollbar-thumb:hover {
   background: #737373; 
 }
-::-webkit-scrollbar-button {
+/*::-webkit-scrollbar-button {
   height: 5px;
-}
+}*/
 .font-sm {
 	font-size: 70%;
 }
